--- a/rsvp.html
+++ b/rsvp.html
@@ -36,6 +36,8 @@
         <!--Disable Captcha-->
         <input type="hidden" name="_captcha" value="false" />
 
+        <input type="hidden" name="_next" value="https://github.com/tmungia/rsvpsubmit/successrsvp.html">
+
         <h5>
           First Name:
           <input
