--- a/rsvp.html
+++ b/rsvp.html
@@ -36,7 +36,7 @@
         <!--Disable Captcha-->
         <input type="hidden" name="_captcha" value="false" />
 
-        <input type="hidden" name="_next" value="https://github.com/tmungia/rsvpsubmit/successrsvp.html">
+        <input type="hidden" name="_next" value="https://github.com/tmungia/successrsvp.html">
 
         <h5>
           First Name:
